<resources>
    <string name="app_name">iLost</string>
    <string name="activity_welcome_icon_content_description">Icon</string>
    <string name="carousel_navigation_dot">Carousel navigation dot</string>
    <string name="button_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ea iste laborum minus nisi.</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium commodi consectetur dolorum eos ex explicabo illum incidunt laudantium, minima modi officia, pariatur provident quae quos sint, sunt veritatis vero?</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
